@@ -3,6 +3,8 @@ log4j.jar=lib/log4j.jar
 occjava.jar=lib/occjava.jar
 trove.jar=lib/trove.jar
 jcae-viewer3d.jar=lib/jcae-viewer3d.jar
+jcae.junit.jar=lib/jcae-junit.jar
+junit.jar=lib/junit4.jar
 
 # http://xml.apache.org/xalan-j/
 # Only required for Java < 1.5
@@ -45,3 +47,4 @@ jcae.extra.viewer3d.packages=org/jcae/mesh/MeshOEMMView.java org/jcae/mesh/MeshO
 
 # test classes. They are only compiled if build.tests is set to true.
 test.packages=org/jcae/mesh/bora/tests/** org/jcae/mesh/amibe/util/tests/** org/jcae/mesh/amibe/patch/tests/**
+jcae.junit.packages=org/jcae/mesh/amibe/util/PAVLSortedTreeTest* org/jcae/mesh/amibe/ds/*Test*
