@@ -12,7 +12,7 @@
 		<propertyfile file="${classes.dir}/timestamp.properties">
 			<entry key="build.time" type="date" pattern="yyyy-MM-dd HH:mm:ss" value="now" />
 		</propertyfile>
-		<javac debug="true" deprecation="true" destdir="${classes.dir}" srcdir="${src.dir}" excludes="${test.packages} ${jcae.extra.viewer3d.packages}">
+		<javac debug="true" deprecation="true" destdir="${classes.dir}" srcdir="${src.dir}" excludes="${test.packages} ${jcae.junit.packages} ${jcae.extra.viewer3d.packages}">
 			<compilerarg line="${compiler.arg}"/>
 			<classpath>
 				<pathelement location="${log4j.jar}"/>
@@ -53,11 +53,36 @@
 		</javac>
 	</target>
 
+	<target name="compile-junit" depends="init" description="Compile junit tests">
+		<mkdir dir="${classes.dir}"/>
+		<javac debug="true" deprecation="true" destdir="${classes.dir}" srcdir="${src.dir}" includes="${jcae.junit.packages}">
+			<compilerarg line="${compiler.arg}"/>
+			<classpath>
+				<pathelement location="${junit.jar}"/>
+			</classpath>
+		</javac>
+	</target>
+
+	<target name="junit" depends="jar,jar-junit" description="Run JUnit tests">
+		<junit printsummary="yes">
+		  	<jvmarg value="-Dlog4j.configuration=file://${user.dir}/log4j.properties"/>
+			<formatter type="plain"/>
+			<classpath>
+				<pathelement location="${jcae.jar}"/>
+				<pathelement location="${junit.jar}"/>
+				<pathelement location="${jcae.junit.jar}"/>
+			</classpath>
+  			<test name="org.jcae.mesh.amibe.util.PAVLSortedTreeTest"/>
+  			<test name="org.jcae.mesh.amibe.ds.HalfEdgeTest"/>
+  			<test name="org.jcae.mesh.amibe.ds.VirtualHalfEdgeTest"/>
+		</junit>
+	</target>
+
 	<target name="jar" depends="jar-main,jar-test" description="jar"/>
 	
 	<target name="jar-main" depends="compile" description="jar">
 		<mkdir dir="lib"/>
-		<jar basedir="${classes.dir}" excludes="${test.packages} **/occ/*" compress="true" jarfile="${jar}">
+		<jar basedir="${classes.dir}" excludes="${test.packages} ${jcae.junit.packages} **/occ/*" compress="true" jarfile="${jar}">
 			<manifest>
 				<attribute name="Main-Class" value="org.jcae.mesh.Mesher"/>
 				<attribute name="Class-Path" value="${jar.dependencies}"/>
@@ -81,6 +106,15 @@
 		</jar>
 	</target>
 	
+	<target name="jar-junit" depends="compile-junit" description="jar">
+		<mkdir dir="lib"/>
+		<jar basedir="${classes.dir}" includes="${jcae.junit.packages}" compress="true" jarfile="${jcae.junit.jar}">
+			<manifest>
+				<attribute name="Class-Path" value="${test.jar.dependencies}"/>
+			</manifest>
+		</jar>
+	</target>
+	
 	<target name="all" depends="dist-bin" description="Build everything."/>
 	
 	<target name="javadoc" description="Javadoc for my API." depends="init">
@@ -88,6 +122,7 @@
 		<javadoc destdir="${javadoc.dir}" packagenames="*">
 			<fileset dir="${src.dir}">
 				<include name="**/*.java"/>
+				<exclude name="**/*Test.java"/>
 				<exclude name="${jcae.extra.viewer3d.packages}"/>
 			</fileset>
 			<tag name="todo" scope="all" description="To do:" />
@@ -104,6 +139,7 @@
 		<delete dir="${javadoc.dir}"/>
 		<delete file="${jar}"/>
 		<delete file="${test.jar}"/>
+		<delete file="${jcae.junit.jar}"/>
 		<delete file="${mesherocc.jar}"/>
 	</target>
 	
